--- a/app/repository.bower/angularjs-slider/src/variables.less
+++ b/app/repository.bower/angularjs-slider/src/variables.less
@@ -12,6 +12,7 @@
 @handleDisabledColor: #d8e0f3;
 @limitLabelTextColor: @labelTextColor;
 @barFillColor: @handleBgColor;
+@barDisabledFillColor: #8b91a2;
 @barNormalColor: #d8e0f3;
 
 @ticksColor: @barNormalColor;
@@ -20,7 +21,7 @@
 @ticksHeight: 10px;
 @ticksValuePosition: -30px;
 @ticksLegendPosition: 24px;
-@ticksValuePositionOnVertical: 22px;
+@ticksValuePositionOnVertical: 24px;
 
 @handleSize: 32px;
 @handlePointerSize: 8px;
