--- a/app/scss/common/_rzslider.scss
+++ b/app/scss/common/_rzslider.scss
@@ -1,116 +1,7 @@
-/**
- * Angular JS slider directive
- *
- * (c) Rafal Zajac <rzajac@gmail.com>
- * http://github.com/rzajac/angularjs-slider
- *
- * Licensed under the MIT license
- */
-
-/* Slider colors */
-
-/* Slider size parameters */
-
-// rzslider {
-//   position: relative;
-//   display: inline-block;
-//   width: 100%;
-//   height: 4px;
-//   margin: 30px 0 15px 0;
-//   vertical-align: middle;
-// }
-//
-// rzslider span {
-//   position: absolute;
-//   display: inline-block;
-//   white-space: nowrap;
-//
-// }
-//
-// rzslider span.rz-base {
-//   width: 100%;
-//   height: 100%;
-//   padding: 0;
-// }
-//
-// rzslider span.rz-bar {
-//   z-index: 0;
-//   width: 100%;
-//   height: 100%;
-//   background: #d8e0f3;
-//   -webkit-border-radius: 2px;
-//      -moz-border-radius: 2px;
-//           border-radius: 2px;
-// }
-//
-// rzslider span.rz-bar.rz-selection {
-//   z-index: 1;
-//   width: 0;
-//   background: #000;
-//   -webkit-border-radius: 2px;
-//      -moz-border-radius: 2px;
-//           border-radius: 2px;
-// }
-//
-// rzslider span.rz-pointer {
-//   top: -10px;
-//   z-index: 2;
-//   width: 24px;
-//   height: 24px;
-//   cursor: pointer;
-//   background-color: #55637d;
-//   -webkit-border-radius: 4px;
-//      -moz-border-radius: 4px;
-//           border-radius: 4px;
-// }
-//
-// rzslider span.rz-pointer:after {
-//   position: absolute;
-//   top: 0px;
-//   left: 0px;
-//   width: 24px;
-//   height: 24px;
-//   background: #55637d;
-//   -webkit-border-radius: 4px;
-//      -moz-border-radius: 4px;
-//           border-radius: 4px;
-//   content: '';
-// }
-//
-// rzslider span.rz-pointer:hover:after {
-//   background-color: #000;
-// }
-//
-// rzslider span.rz-pointer.rz-active:after {
-//   background-color: #000;
-// }
-//
-// rzslider span.rz-bubble {
-//   top: -36px;
-//   padding: 1px 3px;
-//   color: #55637d;
-//   cursor: default;
-//    font-weight: bold;
-//     font-size: 18px;
-// }
-//
-// rzslider span.rz-bubble.rz-selection {
-//   top: 16px;
-// }
-//
-// rzslider span.rz-bubble.rz-limit {
-//   color: #55637d;
-// }
-
-
-
-
-
-
-/*! angularjs-slider - v5.4.3 -
+/*! angularjs-slider - v5.8.7 -
  (c) Rafal Zajac <rzajac@gmail.com>, Valentin Hervieu <valentin@hervieu.me>, Jussi Saarivirta <jusasi@gmail.com>, Angelin Sirbu <angelin.sirbu@gmail.com> -
  https://github.com/angular-slider/angularjs-slider -
- 2016-08-07 */
+ 2016-11-09 */
 .rzslider {
   position: relative;
   display: inline-block;
@@ -135,6 +26,22 @@
 .rzslider[disabled] .rz-pointer {
   cursor: not-allowed;
   background-color: #d8e0f3;
+}
+
+.rzslider[disabled] .rz-bar-wrapper.rz-draggable {
+  cursor: not-allowed;
+}
+
+.rzslider[disabled] .rz-bar.rz-selection {
+  background: #8b91a2;
+}
+
+.rzslider[disabled] .rz-ticks .rz-tick {
+  cursor: not-allowed;
+}
+
+.rzslider[disabled] .rz-ticks .rz-tick.rz-selected {
+  background: #8b91a2;
 }
 
 .rzslider span {
@@ -176,40 +83,39 @@
 
 .rzslider .rz-bar.rz-selection {
   z-index: 2;
-  background: #000000;
+  background: #0db9f0;
   -webkit-border-radius: 2px;
      -moz-border-radius: 2px;
           border-radius: 2px;
 }
 
 .rzslider .rz-pointer {
-  top: -8px;
+  top: -14px;
   z-index: 3;
-  width: 20px;
-  height: 20px;
+  width: 32px;
+  height: 32px;
   cursor: pointer;
-  background-color: #000000;
-  -webkit-border-radius: 2px;
-     -moz-border-radius: 2px;
-          border-radius: 2px;
+  background-color: #0db9f0;
+  -webkit-border-radius: 16px;
+     -moz-border-radius: 16px;
+          border-radius: 16px;
 }
 
 .rzslider .rz-pointer:after {
-  display: none;
   position: absolute;
   top: 12px;
   left: 12px;
   width: 8px;
   height: 8px;
-  background: #000;
-  -webkit-border-radius: 2px;
-     -moz-border-radius: 2px;
-          border-radius: 2px;
+  background: #ffffff;
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
   content: '';
 }
 
 .rzslider .rz-pointer:hover:after {
-  background-color: #000;
+  background-color: #ffffff;
 }
 
 .rzslider .rz-pointer.rz-active {
@@ -217,7 +123,7 @@
 }
 
 .rzslider .rz-pointer.rz-active:after {
-  background-color: #000;
+  background-color: #451aff;
 }
 
 .rzslider .rz-bubble {
@@ -240,23 +146,20 @@
   top: -3px;
   left: 0;
   z-index: 1;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
   width: 100%;
   height: 0;
-  padding: 0 11px;
   margin: 0;
   list-style: none;
   box-sizing: border-box;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
 }
 
 .rzslider .rz-ticks .rz-tick {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 10px;
   height: 10px;
+  margin-left: 11px;
   text-align: center;
   cursor: pointer;
   background: #d8e0f3;
@@ -264,7 +167,7 @@
 }
 
 .rzslider .rz-ticks .rz-tick.rz-selected {
-  background: #000000;
+  background: #0db9f0;
 }
 
 .rzslider .rz-ticks .rz-tick .rz-tick-value {
@@ -283,7 +186,7 @@
 
 .rzslider .rz-ticks.rz-ticks-values-under .rz-tick-value {
   top: initial;
-  bottom: -40px;
+  bottom: -32px;
 }
 
 .rzslider.rz-vertical {
@@ -340,19 +243,17 @@
   z-index: 1;
   width: 0;
   height: 100%;
-  padding: 11px 0;
-  -webkit-flex-direction: column-reverse;
-      -ms-flex-direction: column-reverse;
-          flex-direction: column-reverse;
 }
 
 .rzslider.rz-vertical .rz-ticks .rz-tick {
+  margin-top: 11px;
+  margin-left: auto;
   vertical-align: middle;
 }
 
 .rzslider.rz-vertical .rz-ticks .rz-tick .rz-tick-value {
   top: initial;
-  left: 22px;
+  left: 24px;
   transform: translate(0, -28%);
 }
 
@@ -365,7 +266,7 @@
 }
 
 .rzslider.rz-vertical .rz-ticks.rz-ticks-values-under .rz-tick-value {
-  right: 12px;
+  right: 24px;
   bottom: initial;
   left: initial;
 }
